compile_error.txt


###################### OPENCL PROGRAM BUILD DEBUG OUTPUT ######################

C:\Users\farre\AppData\Local\Temp\comgr-951eae\input\CompileSource:29:41: error: use of undeclared identifier 'layer_len'; did you mean 'layer_length'?
    printf("x: %zu, layer_len: %zu", x, layer_len);
                                        ^~~~~~~~~
                                        layer_length
C:\Users\farre\AppData\Local\Temp\comgr-951eae\input\CompileSource:20:45: note: 'layer_length' declared here
__kernel void forward(int input_length, int layer_length, int weights_offset, int biases_offset, __constant double* weights, __constant double* biases, __constant double* input, __global double* output) {
                                            ^
1 error generated.
Error: Failed to compile source (from CL or HIP source to LLVM IR).
###############################################################################

